frontend/src/container/DashboardContainer/PanelTypeSelectionModal/PanelTypeSelectionModal.styles.scss
.panel-type-selection-modal {
	.ant-modal-content {
		width: 515px;
		max-height: 646px;
		overflow-y: auto;
		flex-shrink: 0;
		border-radius: 4px;
		border: 1px solid var(--l1-border);
		background: var(--l2-background);
		box-shadow: 0px -4px 16px 2px rgba(0, 0, 0, 0.2);
		padding: 0px;

		.ant-modal-header {
			height: 52px;
			padding: 16px;
			background: var(--l2-background);
			border-bottom: 1px solid var(--l1-border);
			margin-bottom: 0px;

			.ant-modal-title {
				color: var(--l1-foreground);
				font-family: Inter;
				font-size: 14px;
				font-style: normal;
				font-weight: 400;
				line-height: 20px; /* 142.857% */
			}
		}

		.ant-modal-body {
			.panel-selection {
				display: flex;
				flex-flow: wrap;
				padding: 16px;
				gap: 16px;

				.selected {
					background: var(--l1-border);
				}

				.ant-card {
					display: flex;
					height: 80px;
					width: 232px;
					padding: 19px 0px;
					justify-content: center;
					align-items: center;
					border-radius: 4px;
					cursor: pointer;
					border: 1px solid var(--l1-border);

					.ant-card-body {
						padding: 0px;
						border-radius: 0px;
						display: flex;
						flex-direction: column;
						gap: 6px;
						align-items: center;

						.ant-typography {
							margin-top: 0px;
							color: var(--l2-foreground);
							font-family: Inter;
							font-size: 14px;
							font-style: normal;
							font-weight: 400;
							line-height: 20px; /* 142.857% */
							letter-spacing: -0.07px;
						}
					}

					.ant-card-body::before {
						content: none;
					}
					.ant-card-body::after {
						content: none;
					}
				}

				.panel-type-text {
					text-align: center;
					margin-top: 1rem;
				}
			}
		}

		.ant-modal-footer {
			border-radius: 0px 0px 4px 4px;
			border-top: 1px solid var(--l1-border);
			background: var(--l2-background);
			padding: 12px 15px;
			margin-top: 0px;

			.ant-btn {
				width: 100%;
				display: flex;
				align-items: center;
				flex-direction: row-reverse;
				justify-content: center;
				color: var(--l1-foreground);

				/* button/ small  */
				font-family: Inter;
				font-size: 12px;
				font-style: normal;
				font-weight: 500;
				line-height: 24px; /* 200% */
				border-radius: 2px;
				background: var(--primary-background);
				padding: 4px 8px;
				gap: 4px;
			}
		}

		&::-webkit-scrollbar {
			width: 0.1rem;
		}
	}
}

.lightMode {
	.panel-type-selection-modal {
		.ant-modal-content {
			border: 1px solid var(--l1-border);
			background: var(--l1-background);

			.ant-modal-header {
				background: var(--l1-background);
				border-bottom: 1px solid var(--l1-border);

				.ant-modal-title {
					color: var(--l1-foreground);
				}
			}

			.ant-modal-body {
				.panel-selection {
					.selected {
						background: var(--l2-background);
					}

					.ant-card {
						border: 1px solid var(--l1-border);

						.ant-card-body {
							.ant-typography {
								color: var(--l2-foreground);
							}
						}
					}
				}
			}

			.ant-modal-footer {
				border-top: 1px solid var(--l1-border);
				background: var(--l1-background);

				.ant-btn {
					color: var(--l1-foreground);

					background: var(--primary-background);
				}
			}
		}
	}
}

